@@ -147,6 +147,9 @@
    <feature url="features/net.sourceforge.eclipseccase_2.2.31.201306020923.jar" id="net.sourceforge.eclipseccase" version="2.2.31.201306020923">
       <category name="eclipse-ccase-35"/>
    </feature>
+   <feature url="features/net.sourceforge.eclipseccase_2.2.32.201307161755.jar" id="net.sourceforge.eclipseccase" version="2.2.32.201307161755">
+      <category name="eclipse-ccase-35"/>
+   </feature>
    <category-def name="eclipse-ccase-3" label="Eclipse ClearCase Integration for Eclipse 3.0">
       <description>
          The free and open source Eclipse ClearCase integration for Eclipse 3.x.
